--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 #spring.datasource.username=uep
 #spring.datasource.password=Uepuser01*
 
-spring.datasource.url=jdbc:mysql://localhost:3306/zaitao
+spring.datasource.url=jdbc:mysql://114.115.181.91:3306/zaitao
 spring.datasource.username=zaitao
 spring.datasource.password=Zaitao01#*
 
