--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 
 server.port=8080
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,text/css
+
 #spring.datasource.url=jdbc:mysql://localhost:3306/uep
 #spring.datasource.username=uep
 #spring.datasource.password=Uepuser01*
@@ -22,6 +25,12 @@ spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
 spring.resources.static-locations=classpath:/static/
+spring.resources.cache.cachecontrol.cache-public=true
+spring.resources.cache.cachecontrol.max-age=86400
+spring.resources.cache.period=86400
+#spring.resources.chain.enabled=true
+#spring.resources.chain.cache=true
+#spring.resources.chain.gzipped=true
 
 logging.file=log/zaitao.log
 logging.file.max-history=50
