--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.password=Zaitao01#*
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 hibernate.dialect=mysql
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.jackson.date-format=yyyy-MM-dd-HH:mm:ss
 #spring.jackson.time-zone=GMT+8
 #spring.servlet.multipart.location=temp
